--- a/package.json
+++ b/package.json
@@ -35,12 +35,16 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cookie-parser": "^1.4.6",
+    "handlebars": "^4.7.7",
+    "nestjs-telegraf": "^2.6.3",
+    "otp-generator": "^4.0.1",
     "pg": "^8.9.0",
     "pg-hstore": "^2.3.4",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
     "sequelize": "^6.29.0",
     "sequelize-typescript": "^2.1.5",
+    "telegraf": "^4.12.2",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
