--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nest-user-role",
+  "name": "stadium",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -22,27 +22,25 @@
   },
   "dependencies": {
     "@nestjs-modules/mailer": "^1.8.1",
-    "@nestjs/common": "^9.0.0",
+    "@nestjs/common": "^9.3.9",
     "@nestjs/config": "^2.3.1",
-    "@nestjs/core": "^9.0.0",
+    "@nestjs/core": "^9.3.9",
     "@nestjs/jwt": "^10.0.2",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/sequelize": "^9.0.0",
-    "@nestjs/serve-static": "^3.0.1",
     "@nestjs/swagger": "^6.2.1",
-    "bcryptjs": "^2.4.3",
+    "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cookie-parser": "^1.4.6",
     "handlebars": "^4.7.7",
     "nestjs-telegraf": "^2.6.3",
     "otp-generator": "^4.0.1",
-    "pg": "^8.9.0",
-    "pg-hstore": "^2.3.4",
+    "pg": "^8.10.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
-    "sequelize": "^6.29.0",
+    "sequelize": "^6.29.3",
     "sequelize-typescript": "^2.1.5",
     "telegraf": "^4.12.2",
     "uuid": "^9.0.0"
@@ -56,7 +54,6 @@
     "@types/node": "18.11.18",
     "@types/sequelize": "^4.28.14",
     "@types/supertest": "^2.0.11",
-    "@types/uuid": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "eslint": "^8.0.1",
